api-gateway/deploy/setup/ingress/ingress-rancher.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher
  namespace: cattle-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod-rancher"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: rancher.zimji.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rancher
                port:
                  number: 80
  tls:
    - hosts:
        - rancher.zimji.com
      secretName: rancher-tls-secret
